stats service primera iteracion

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -45,6 +45,7 @@
 @import './adminVentas/paySaleDebtModal';
 @import './adminVentas/clinicalDashboard';
 @import './adminVentas/resumenSemanal';
+@import './adminVentas/resumenModalStyles';
 @import './adminVentas/saleDetailModal';
 @import './utils/peluqueroProfile.scss';
 
