subidos transferencia tutor

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,6 +39,7 @@
 @import './adminClinica/monitorClinica';
 @import './adminClinica/pacientesForms';
 @import './adminClinica/tutoresForms';
+@import './adminClinica//transferPacienteModal';
 @import './adminVentas/cajaDiaria';
 @import './adminVentas/cajaDetailPopup';
 @import './adminVentas/ventasGuardadasModal';
