--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14150,6 +14150,15 @@ button.btn-reset:hover {
   margin: 0 0 1rem 0;
   color: #2980b9;
 }
+.sale-detail-section .sale-detail-payments-list li .payment-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+.sale-detail-section .sale-detail-payments-list li .payment-info .payment-date {
+  font-size: 0.8rem;
+  color: #576677;
+}
 
 .sale-detail-item-list {
   list-style: none;
