servicio de estadisticas mejorado

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -48,6 +48,7 @@
 @import './adminVentas/resumenSemanal';
 @import './adminVentas/resumenModalStyles';
 @import './adminVentas/saleDetailModal';
+@import './adminVentas/managerStyles';
 @import './utils/peluqueroProfile.scss';
 
 
