ia generativa para cargar stock usando imagenes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -50,6 +50,8 @@
 @import './adminVentas/saleDetailModal';
 @import './adminVentas/managerStyles';
 @import './utils/peluqueroProfile.scss';
+@import './aiHelper/aiHelper';
+@import './aiHelper//aiHelperList';
 
 
 * {
